[metadata]
name = librusapi
long_description = file: README.org, LICENSE
version = 0.0.1
license = MIT
description = Scraper for Librus Synergia
author = Maksymilian Jodłowski
url = https://github.com/ravensiris/librusapi
keywords = librus, scraper, api
classifiers = 
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
download_url = https://github.com/ravensiris/librusapi/archive/v0.0.1c.tar.gz

[options]
packages = librusapi
install_requires =
  requests
  beautifulsoup4
  lxml

[flake8]
max-line-length = 110
